Ensure forms don't zoom on mobile

--- a/src/ui/components/FormContact/stylesheet.css
+++ b/src/ui/components/FormContact/stylesheet.css
@@ -66,9 +66,11 @@
   width: 100%;
   padding: calc(1.5rem - 2px) calc(1.5rem - 2px);
   border: 2px solid #ccc;
+  border-radius: 0;
   box-sizing: border-box;
   font-size: 2rem;
   line-height: 3rem;
+  -webkit-appearance: none;
 }
 
 .control:focus {
@@ -104,5 +106,11 @@
   }
   100% {
     transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@media (max-width: 699px) {
+  .control {
+    font-size: 16px;
   }
 }
